@@ -277,7 +277,9 @@ extern AVFilter ff_vf_lut3d;
 extern AVFilter ff_vf_lutrgb;
 extern AVFilter ff_vf_lutyuv;
 extern AVFilter ff_vf_maskedclamp;
+extern AVFilter ff_vf_maskedmax;
 extern AVFilter ff_vf_maskedmerge;
+extern AVFilter ff_vf_maskedmin;
 extern AVFilter ff_vf_maskfun;
 extern AVFilter ff_vf_mcdeint;
 extern AVFilter ff_vf_mergeplanes;
